[#140641593] Fix size on mobile

--- a/app/assets/stylesheets/sephora_style_guide/partials/product-card.scss
+++ b/app/assets/stylesheets/sephora_style_guide/partials/product-card.scss
@@ -19,7 +19,7 @@
   // mobile and tablet
   @include media-breakpoint-down(md) {
     width: $product-card-width-mobile;
-    height: $product-card-image-height-mobile;
+    height: $product-card-height-mobile;
 
     .product-card-image {
       width: $product-card-image-width-mobile;
